# AdventOfCode

./: .gitignore  Program.cs  README.md
Lib/: BaseDay.cs
Solutions/2023/Lua/Solution/: main.lua
Solutions/2024/CPlusPlus/: CMakeLists.txt  main.cpp
Solutions/2024/CPlusPlus/Solutions/: Day1.cpp  Day1.h  Day2.cpp  Day2.h  Day3.cpp  Day3.h  Day4.cpp  Day4.h  Day5.cpp  Day5.h
Solutions/2024/CPlusPlus/Utils/: SolutionBase.h  SolutionHandler.cpp  SolutionHandler.h
Solutions/AoC2022/Day1/: Day1.cs
Solutions/AoC2022/Day10/: Day10.cs
Solutions/AoC2022/Day11/: Day11.cs
Solutions/AoC2022/Day12/: Day12.cs
Solutions/AoC2022/Day13/: Day13.cs
Solutions/AoC2022/Day14/: Day14.cs
Solutions/AoC2022/Day2/: Day2.cs
Solutions/AoC2022/Day3/: Day3.cs
Solutions/AoC2022/Day4/: Day4.cs
Solutions/AoC2022/Day5/: Day5.cs
Solutions/AoC2022/Day7/: Day7.cs
Solutions/AoC2022/Day9/: Day9.cs
Solutions/CSharp/: AdventOfCode.sln
Solutions/CSharp/Utilities/: BaseDay.cs  FileReader.cs
Solutions/Day1/: Day1.sln
Solutions/Day1/Day1/: Program.cs
Solutions/Lua/Solution/: .gitignore  InputHandler.lua  main.lua  solution-dev-1.rockspec  solutionCreator.lua  switch.lua
Solutions/Lua/Solution/Day1/: Day1.lua
Solutions/Lua/Solution/Day2/: Day2.lua
Solutions/Lua/Solution/Day3/: Day3.lua
Solutions/Lua/Solution/Day4/: Day4.lua
Solutions/Lua/Solution/Day5/: Day5.lua
Solutions/Lua/Solution/Day6/: Day6.lua
Solutions/Lua/Solution/Day7/: Day7.lua
Solutions/Lua/Solution/Day8/: Day8.lua
Solutions/Lua/Solution/Utilities/: inputHandler.lua  methodProfiler.lua
(+14 files in other folders)
